fix(i18n): add missing superadmin sidebar translations [AGENT-001-A]
Added missing translations for:
- superadmin.nav.subscriptions (EN/AR)
- superadmin.groups.* (8 group labels for EN/AR)

These were causing the sidebar to show translation keys instead of labels.

--- a/i18n/sources/superadmin.translations.json
+++ b/i18n/sources/superadmin.translations.json
@@ -8,6 +8,14 @@
     "superadmin.logout": "Logout",
     "superadmin.loggingOut": "Logging out...",
     "superadmin.verifyingAccess": "Verifying access...",
+    "superadmin.groups.ssot": "SSOT & Issues",
+    "superadmin.groups.organization": "Organization",
+    "superadmin.groups.marketplace": "Marketplace",
+    "superadmin.groups.system": "System",
+    "superadmin.groups.data": "Data & Content",
+    "superadmin.groups.security": "Security",
+    "superadmin.groups.finance": "Finance",
+    "superadmin.groups.communication": "Communication",
     "superadmin.nav.fmDashboard": "FM Dashboard",
     "superadmin.nav.issues": "Issues Tracker",
     "superadmin.nav.ssot": "SSOT Viewer",
@@ -20,6 +28,7 @@
     "superadmin.nav.jobs": "Jobs & Queues",
     "superadmin.nav.system": "System Settings",
     "superadmin.nav.billing": "Billing & Plans",
+    "superadmin.nav.subscriptions": "Subscriptions",
     "superadmin.nav.translations": "Translations",
     "superadmin.nav.database": "Database Admin",
     "superadmin.nav.security": "Security Center",
@@ -139,6 +148,14 @@
     "superadmin.logout": "تسجيل الخروج",
     "superadmin.loggingOut": "جارٍ تسجيل الخروج...",
     "superadmin.verifyingAccess": "جارٍ التحقق من الوصول...",
+    "superadmin.groups.ssot": "SSOT والمشاكل",
+    "superadmin.groups.organization": "المؤسسة",
+    "superadmin.groups.marketplace": "السوق",
+    "superadmin.groups.system": "النظام",
+    "superadmin.groups.data": "البيانات والمحتوى",
+    "superadmin.groups.security": "الأمان",
+    "superadmin.groups.finance": "المالية",
+    "superadmin.groups.communication": "التواصل",
     "superadmin.nav.fmDashboard": "لوحة إدارة المرافق",
     "superadmin.nav.issues": "متتبع المشاكل",
     "superadmin.nav.ssot": "عارض SSOT",
@@ -151,6 +168,7 @@
     "superadmin.nav.jobs": "المهام والصفوف",
     "superadmin.nav.system": "إعدادات النظام",
     "superadmin.nav.billing": "الفوترة والخطط",
+    "superadmin.nav.subscriptions": "الاشتراكات",
     "superadmin.nav.translations": "الترجمات",
     "superadmin.nav.database": "إدارة قاعدة البيانات",
     "superadmin.nav.security": "مركز الأمان",
