feat(ui): Enhance ActionFeedback with i18n + tooltip support [AGENT-001-A]
- Enhanced ActionButton to use proper Button component with all variants
- Added SimpleTooltip integration for hover information
- Added i18n support with ACTION_I18N_KEYS for automatic translation
- Added Arabic translations for all feedback messages (common.feedback.*)
- Applied ActionButton to Settings page (4 save buttons with tooltips)
- Added tooltips to Catalog page icon buttons (View, Refresh)

Action types supported: copy, save, delete, add, send, download, upload, refresh

Usage: <ActionButton actionType='save' tooltip='Tooltip text' onClick={...}>
Messages auto-translate based on actionType, or use custom message prop.

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -2934,6 +2934,35 @@
       "loadData": "تحميل البيانات"
     },
     "success": "نجح",
+    "feedback": {
+      "copied": "تم النسخ",
+      "copyFailed": "فشل النسخ",
+      "copying": "جارٍ النسخ...",
+      "saved": "تم الحفظ",
+      "saveFailed": "فشل الحفظ",
+      "saving": "جارٍ الحفظ...",
+      "deleted": "تم الحذف",
+      "deleteFailed": "فشل الحذف",
+      "deleting": "جارٍ الحذف...",
+      "added": "تمت الإضافة",
+      "addFailed": "فشلت الإضافة",
+      "adding": "جارٍ الإضافة...",
+      "sent": "تم الإرسال",
+      "sendFailed": "فشل الإرسال",
+      "sending": "جارٍ الإرسال...",
+      "downloaded": "تم التنزيل",
+      "downloadFailed": "فشل التنزيل",
+      "downloading": "جارٍ التنزيل...",
+      "uploaded": "تم الرفع",
+      "uploadFailed": "فشل الرفع",
+      "uploading": "جارٍ الرفع...",
+      "refreshed": "تم التحديث",
+      "refreshFailed": "فشل التحديث",
+      "refreshing": "جارٍ التحديث...",
+      "done": "تم",
+      "failed": "فشل",
+      "loading": "جارٍ التحميل..."
+    },
     "confirm": "تأكيد",
     "close": "إغلاق",
     "back": "رجوع",
