--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2949,6 +2949,35 @@
       "loadData": "Load Data"
     },
     "success": "Success",
+    "feedback": {
+      "copied": "Copied",
+      "copyFailed": "Copy failed",
+      "copying": "Copying...",
+      "saved": "Saved",
+      "saveFailed": "Save failed",
+      "saving": "Saving...",
+      "deleted": "Deleted",
+      "deleteFailed": "Delete failed",
+      "deleting": "Deleting...",
+      "added": "Added",
+      "addFailed": "Add failed",
+      "adding": "Adding...",
+      "sent": "Sent",
+      "sendFailed": "Send failed",
+      "sending": "Sending...",
+      "downloaded": "Downloaded",
+      "downloadFailed": "Download failed",
+      "downloading": "Downloading...",
+      "uploaded": "Uploaded",
+      "uploadFailed": "Upload failed",
+      "uploading": "Uploading...",
+      "refreshed": "Refreshed",
+      "refreshFailed": "Refresh failed",
+      "refreshing": "Refreshing...",
+      "done": "Done",
+      "failed": "Failed",
+      "loading": "Loading..."
+    },
     "confirm": "Confirm",
     "close": "Close",
     "back": "Back",
