fix(p2): Add error context to superadmin pages + fix gdpr.ts lint errors
P2 Fixes:
- CR-2025-12-29-001: Add error context to jobs page processJobs catch block
- CR-2025-12-29-002: Add error context to subscriptions page saveTier catch blocks

Lint Fix:
- Fix unused variable errors in gdpr.ts sanitizePersonalInfo function
- Use void to explicitly mark intentionally unused destructured variables

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors (27 warnings - pre-existing)

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -5328,6 +5328,25 @@
       "footerContent": "محتوى التذييل",
       "progress": "التقدم"
     },
+    "dashboard": {
+      "title": "نظرة عامة على لوحة التحكم",
+      "subtitle": "صحة النظام والمقاييس والنشاط الأخير",
+      "selectTenant": "فلترة حسب المستأجر",
+      "allTenants": "جميع المستأجرين",
+      "filteringBy": "تصفية حسب المستأجر:",
+      "totalTenants": "إجمالي المستأجرين",
+      "activeUsers": "المستخدمون النشطون اليوم",
+      "systemUptime": "وقت تشغيل النظام",
+      "avgResponseTime": "متوسط وقت الاستجابة",
+      "serviceHealth": "صحة الخدمات",
+      "serviceHealthDesc": "حالة خدمات المنصة في الوقت الفعلي",
+      "noServices": "لا تتوفر بيانات الخدمة",
+      "recentActivity": "النشاط الأخير",
+      "noActivity": "لا يوجد نشاط حديث",
+      "moduleStatus": "حالة الوحدات",
+      "moduleStatusDesc": "وحدات المنصة وصحتها",
+      "quickActions": "إجراءات سريعة"
+    },
     "userLogs": {
       "subtitle": "مراقبة نشاط المستخدمين والجلسات والتفاعلات للدعم",
       "totalLogs": "إجمالي السجلات",
