feat(ui): Enhanced centralized pagination with page size selector
New Features:
- Page size selector (25, 50, 100, All options)
- Jump-to-page input for large datasets
- First/Last page buttons with smart visibility
- Smart page range with ellipsis
- RTL-aware navigation icons
- Responsive/compact mode for mobile
- URL sync for page and pageSize params

New Hook (hooks/usePagination.ts):
- Centralized pagination state management
- URL query param sync (optional)
- Computed values: skip, limit for API calls
- paginationProps for component spreading

Arabic i18n:
- Added: السابق, التالي, الأولى, الأخيرة
- Added: عدد الصفوف, الكل, انتقل إلى

Usage:
const pagination = usePagination({ totalItems: data.total });
<Pagination {...pagination.paginationProps} />

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -3280,7 +3280,16 @@
     "showing": "عرض",
     "to": "إلى",
     "of": "من",
-    "results": "نتيجة"
+    "results": "نتيجة",
+    "previous": "السابق",
+    "next": "التالي",
+    "first": "الأولى",
+    "last": "الأخيرة",
+    "rowsPerPage": "عدد الصفوف",
+    "all": "الكل",
+    "goTo": "انتقل إلى",
+    "page": "صفحة",
+    "pageOf": "صفحة {{current}} من {{total}}"
   },
   "errors": {
     "404": {
