fix(i18n): Complete review F2/F3 fixes - add translation keys + localize toasts [AGENT-001-A]
Reviews: FIXIZIT-REVIEW-20251231-110712 + FIXIZIT-REVIEW-20251231-111631

## i18n Key Additions (en.json + ar.json)
- superadmin.dashboard: title, subtitle, selectTenant, allTenants, filteringBy,
  totalTenants, activeUsers, systemUptime, avgResponseTime, serviceHealth,
  serviceHealthDesc, noServices, recentActivity, noActivity, moduleStatus,
  moduleStatusDesc, quickActions, routes, tenantsLoadFailed, loadFailed, lastUpdated
- superadmin.status: healthy, degraded, down, warning, error, unknown
- superadmin.issues.toast: errorTitle, loadFailed, noSelectionTitle,
  noSelectionDescription, noDataTitle, noDataDescription, bulkActionTitle,
  markingResolved, archiving, deleting
- common.toast: error, loadIssuesFailed, exportComplete, exportFailed,
  exportFailedDescription, exportedCount

## Dashboard Fixes
- Use common.clearFilters (existing key) instead of common.clearFilter
- Localize 'Last updated:' with t()
- Add !response.ok error handling with localized messages

## Issues Pages (3 files)
- superadmin/issues: 6 toast calls localized (copy, export, bulk actions)
- dashboard/issues: Added useI18n, 3 toast calls localized
- fm/admin/issues: Added useI18n, 4 toast calls localized

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors (27 pre-existing warnings)

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -2934,6 +2934,14 @@
       "loadData": "تحميل البيانات"
     },
     "success": "نجح",
+    "toast": {
+      "error": "خطأ",
+      "loadIssuesFailed": "فشل تحميل المشكلات",
+      "exportComplete": "اكتمل التصدير",
+      "exportFailed": "فشل التصدير",
+      "exportFailedDescription": "تعذر تصدير المشكلات",
+      "exportedCount": "تم تصدير {{count}} مشكلة"
+    },
     "feedback": {
       "copied": "تم النسخ",
       "copyFailed": "فشل النسخ",
@@ -5367,6 +5375,20 @@
       "warning": "تحذير",
       "error": "خطأ",
       "unknown": "غير معروف"
+    },
+    "issues": {
+      "toast": {
+        "errorTitle": "خطأ",
+        "loadFailed": "فشل تحميل المشكلات",
+        "noSelectionTitle": "لا يوجد تحديد",
+        "noSelectionDescription": "يرجى تحديد المشكلات للنسخ",
+        "noDataTitle": "لا توجد بيانات",
+        "noDataDescription": "لا توجد مشكلات للتصدير",
+        "bulkActionTitle": "إجراء جماعي",
+        "markingResolved": "تحديد {{count}} مشكلة كمحلولة",
+        "archiving": "أرشفة {{count}} مشكلة",
+        "deleting": "حذف {{count}} مشكلة"
+      }
     },
     "userLogs": {
       "subtitle": "مراقبة نشاط المستخدمين والجلسات والتفاعلات للدعم",
