fix(i18n): Add missing SuperAdmin sidebar translations [AGENT-001-A]
Added missing translation keys:
- superadmin.groups.* (ssot, organization, marketplace, system, data, security, finance, communication)
- superadmin.nav.userLogs, superadmin.nav.permissions, superadmin.nav.footerContent

Regenerated dictionaries to sync source with generated files.

Fixes:
- SuperAdmin sidebar now shows proper group labels instead of fallback IDs
- All navigation items have proper translations for EN and AR

--- a/i18n/sources/superadmin.translations.json
+++ b/i18n/sources/superadmin.translations.json
@@ -41,6 +41,9 @@
     "superadmin.nav.support": "Support Tickets",
     "superadmin.nav.vendors": "Vendor Management",
     "superadmin.nav.customerRequests": "Customer Requests",
+    "superadmin.nav.userLogs": "User Logs",
+    "superadmin.nav.permissions": "Permissions",
+    "superadmin.nav.footerContent": "Footer Content",
     "superadmin.issues.title": "System Issue Tracker",
     "superadmin.issues.subtitle": "Full system access • Track and manage all issues",
     "superadmin.issues.refresh": "Refresh",
@@ -181,6 +184,9 @@
     "superadmin.nav.support": "تذاكر الدعم",
     "superadmin.nav.vendors": "إدارة الموردين",
     "superadmin.nav.customerRequests": "طلبات العملاء",
+    "superadmin.nav.userLogs": "سجلات المستخدمين",
+    "superadmin.nav.permissions": "الصلاحيات",
+    "superadmin.nav.footerContent": "محتوى التذييل",
     "superadmin.issues.title": "متتبع مشاكل النظام",
     "superadmin.issues.subtitle": "وصول كامل للنظام • تتبع وإدارة جميع المشاكل",
     "superadmin.issues.refresh": "تحديث",
