refactor(infra): Remove Redis dependency, migrate to in-memory queues [AGENT-0005]
BREAKING CHANGE: Redis is no longer required for deployment

Infrastructure Changes:
- Removed lib/redis.ts, lib/redis-client.ts, lib/otp-store-redis.ts
- Removed lib/stubs/bullmq.ts, lib/stubs/ioredis.ts
- Migrated jobs/* from bullmq to @/lib/queue (in-memory)
- Updated tsconfig.json to remove ioredis/bullmq path aliases

Queue Migration:
- export-worker.ts: Removed Redis CI check
- package-activation-queue.ts: Use @/lib/queue instead of bullmq
- search-index-jobs.ts: Use @/lib/queue instead of bullmq
- zatca-retry-queue.ts: Use @/lib/queue instead of bullmq

Test Updates:
- Updated 15+ test files to mock @/lib/cache instead of @/lib/redis
- Removed Redis-specific test cases
- Added otp-store.test.ts and pubsub.test.ts for new implementations

Script Updates:
- Removed Redis references from security scans and merge gates
- Updated check-hardcoded-uris to not scan for redis:// URIs

Translation Updates:
- Changed 'Redis active/inactive' to 'Cache active/inactive' in admin UI

NOTE: This is part of Redis removal effort for simpler deployment

--- a/i18n/sources/admin.translations.json
+++ b/i18n/sources/admin.translations.json
@@ -150,8 +150,8 @@
     "rateLimit.summary.attempts": "attempts",
     "rateLimit.summary.window": "per {{window}} minutes",
     "rateLimit.summary.distributed": "Distributed status",
-    "rateLimit.summary.redisActive": "Redis active",
-    "rateLimit.summary.redisInactive": "In-memory",
+    "rateLimit.summary.cacheActive": "Cache active",
+    "rateLimit.summary.cacheInactive": "In-memory",
     "rateLimit.table.title": "Endpoint activity ({{minutes}}m window)",
     "rateLimit.table.subtitle": "Top endpoints currently being throttled. Includes org-aware rate limits where available.",
     "rateLimit.table.window": "Window",
@@ -161,8 +161,8 @@
     "rateLimit.table.unique": "Unique keys",
     "rateLimit.table.orgs": "Orgs",
     "rateLimit.table.global": "Global",
-    "rateLimit.redis.warning": "Recent Redis warning",
-    "rateLimit.redis.lastErrorAt": "Last error at {{time}}",
+    "rateLimit.cache.warning": "Recent cache warning",
+    "rateLimit.cache.lastErrorAt": "Last error at {{time}}",
     "admin.featureSettings.badges.beta": "Beta",
     "admin.featureSettings.badges.comingSoon": "Coming Soon",
     "admin.featureSettings.badges.new": "New",
@@ -736,8 +736,8 @@
     "rateLimit.summary.attempts": "محاولات",
     "rateLimit.summary.window": "كل {{window}} دقيقة",
     "rateLimit.summary.distributed": "الحالة الموزعة",
-    "rateLimit.summary.redisActive": "Redis فعال",
-    "rateLimit.summary.redisInactive": "ذاكرة داخلية",
+    "rateLimit.summary.cacheActive": "التخزين المؤقت نشط",
+    "rateLimit.summary.cacheInactive": "ذاكرة داخلية",
     "rateLimit.table.title": "نشاط المسارات (نافذة {{minutes}} دقيقة)",
     "rateLimit.table.subtitle": "أعلى المسارات التي يتم خنقها حالياً. تتضمن تحديد المعدل للمنظمة عند توفره.",
     "rateLimit.table.window": "النافذة",
@@ -747,8 +747,8 @@
     "rateLimit.table.unique": "مفاتيح فريدة",
     "rateLimit.table.orgs": "المنظمات",
     "rateLimit.table.global": "عالمي",
-    "rateLimit.redis.warning": "تحذير Redis حديث",
-    "rateLimit.redis.lastErrorAt": "آخر خطأ في {{time}}",
+    "rateLimit.cache.warning": "تحذير التخزين المؤقت حديث",
+    "rateLimit.cache.lastErrorAt": "آخر خطأ في {{time}}",
     "admin.featureSettings.badges.beta": "تجريبي",
     "admin.featureSettings.badges.comingSoon": "قريباً",
     "admin.featureSettings.badges.new": "جديد",
