fix(i18n): Add missing translation keys [AGENT-0030]
Added translations for:
- superadmin.webhooks.status.* (active, paused, failing)
- superadmin.webhooks.deliveryStatus.* (success, failed, pending, retrying)
- superadmin.issues.connection.* (dbFailed, fetchFailed, serverError, retry, troubleshooting)
- workOrders.bulk.errors.* (assigneeRequired, bulkFailed)
- workOrders.offline.* (syncSuccess, syncCount, syncFailed, syncFailedCount, statusQueued, statusFailed)

Both EN and AR translations provided.
Regenerated i18n dictionaries (31,528 keys per locale).

Fixes pre-existing CI i18n gate failures.

--- a/i18n/sources/superadmin.translations.json
+++ b/i18n/sources/superadmin.translations.json
@@ -138,6 +138,23 @@
     "superadmin.ssot.metadata.lines": "Lines",
     "superadmin.ssot.search.placeholder": "Search in SSOT...",
     "superadmin.ssot.search.matches": "{count} matches",
+    "superadmin.webhooks.status.active": "Active",
+    "superadmin.webhooks.status.paused": "Paused",
+    "superadmin.webhooks.status.failing": "Failing",
+    "superadmin.webhooks.deliveryStatus.success": "Success",
+    "superadmin.webhooks.deliveryStatus.failed": "Failed",
+    "superadmin.webhooks.deliveryStatus.pending": "Pending",
+    "superadmin.webhooks.deliveryStatus.retrying": "Retrying",
+    "superadmin.issues.connection.title": "Database Connection Issue",
+    "superadmin.issues.connection.dbFailed": "Database connection failed. Please check your MongoDB configuration.",
+    "superadmin.issues.connection.fetchFailed": "Unable to connect to the server. Please check if the API is running.",
+    "superadmin.issues.connection.serverError": "Server error: {{error}}",
+    "superadmin.issues.connection.retry": "Retry database connection",
+    "superadmin.issues.connection.troubleshootingTitle": "Troubleshooting Steps:",
+    "superadmin.issues.connection.troubleshooting.env": "Check that MONGODB_URI environment variable is set correctly",
+    "superadmin.issues.connection.troubleshooting.atlas": "Verify MongoDB Atlas cluster is running",
+    "superadmin.issues.connection.troubleshooting.ip": "Ensure your IP is whitelisted in Atlas Network Access",
+    "superadmin.issues.connection.troubleshooting.logs": "Check server logs for detailed error messages",
     "superadmin.auth.redirectingToLogin": "Redirecting to login...",
     "superadmin.auth.verifyingSession": "Verifying session...",
     "superadmin.auth.clickHereIfNotRedirected": "Click here if not redirected"
@@ -281,6 +298,23 @@
     "superadmin.ssot.metadata.lines": "الأسطر",
     "superadmin.ssot.search.placeholder": "البحث في SSOT...",
     "superadmin.ssot.search.matches": "{count} نتيجة",
+    "superadmin.webhooks.status.active": "نشط",
+    "superadmin.webhooks.status.paused": "متوقف",
+    "superadmin.webhooks.status.failing": "فشل",
+    "superadmin.webhooks.deliveryStatus.success": "نجاح",
+    "superadmin.webhooks.deliveryStatus.failed": "فشل",
+    "superadmin.webhooks.deliveryStatus.pending": "معلق",
+    "superadmin.webhooks.deliveryStatus.retrying": "إعادة المحاولة",
+    "superadmin.issues.connection.title": "مشكلة في الاتصال بقاعدة البيانات",
+    "superadmin.issues.connection.dbFailed": "فشل الاتصال بقاعدة البيانات. يرجى التحقق من إعدادات MongoDB.",
+    "superadmin.issues.connection.fetchFailed": "تعذر الاتصال بالخادم. يرجى التحقق من تشغيل واجهة برمجة التطبيقات.",
+    "superadmin.issues.connection.serverError": "خطأ في الخادم: {{error}}",
+    "superadmin.issues.connection.retry": "إعادة محاولة الاتصال بقاعدة البيانات",
+    "superadmin.issues.connection.troubleshootingTitle": "خطوات استكشاف الأخطاء:",
+    "superadmin.issues.connection.troubleshooting.env": "تحقق من ضبط متغير البيئة MONGODB_URI بشكل صحيح",
+    "superadmin.issues.connection.troubleshooting.atlas": "تأكد من تشغيل مجموعة MongoDB Atlas",
+    "superadmin.issues.connection.troubleshooting.ip": "تأكد من إضافة عنوان IP الخاص بك في قائمة الوصول للشبكة في Atlas",
+    "superadmin.issues.connection.troubleshooting.logs": "تحقق من سجلات الخادم للحصول على رسائل خطأ مفصلة",
     "superadmin.auth.redirectingToLogin": "جارٍ إعادة التوجيه لتسجيل الدخول...",
     "superadmin.auth.verifyingSession": "جارٍ التحقق من الجلسة...",
     "superadmin.auth.clickHereIfNotRedirected": "انقر هنا إذا لم تتم إعادة التوجيه"
