fix(i18n): BUG-I18N-001 - Add 3 missing AR translations + Sprint 3 audit
Sprint 3 P1 Audit Results:
- BUG-TS-001: DEFERRED - 61 production ny types (Mongoose queries, 8h+ effort)
- BUG-I18N-001: FIXED - Added backToPricing, invalidPlan, invalidPlanDescription to ar.json
- LOGIC-SLA-001: FALSE POSITIVE - sla-breach-service.ts complete (435 lines, 20 tests)
- COMP-A11Y-001: EXISTS - a11y.test.ts (493 lines) covers WCAG 2.1 AA

Roadmap Summary (Sprints 1-3):
- 11 items reviewed
- 5 FALSE POSITIVES (code already correct)
- 2 FIXED (hydration + i18n)
- 3 EXISTS (tests/implementations already present)
- 1 DEFERRED (low priority)
- 89 actionable items remaining

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -127,12 +127,15 @@
     "accountDesc": "أنشئ حسابك للبدء",
     "accountInfo": "معلومات الحساب",
     "back": "رجوع",
+    "backToPricing": "العودة للأسعار",
     "companyName": "اسم الشركة",
     "confirmPassword": "تأكيد كلمة المرور",
     "continueToPayment": "المتابعة للدفع",
     "createAccount": "إنشاء حساب",
     "email": "البريد الإلكتروني",
     "firstName": "الاسم الأول",
+    "invalidPlan": "خطة غير صالحة",
+    "invalidPlanDescription": "الخطة المحددة غير موجودة. يرجى اختيار خطة صالحة.",
     "lastName": "اسم العائلة",
     "monthly": "شهرياً",
     "orderSummary": "ملخص الطلب",
